[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/qibla_finder/background.jpg" type="Texture" id=1]
[ext_resource path="res://assets/qibla_finder/qibla.png" type="Texture" id=2]
[ext_resource path="res://src/qibla_finder/qibla_finder.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/red_cancel.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/pottaone-regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/qibla_finder/location.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/theme_1.tres" type="Theme" id=7]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="qibla" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="qibla"]
position = Vector2( 23.5, 11.5 )
scale = Vector2( 0.820313, 0.820313 )
texture = ExtResource( 2 )

[node name="exit" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton" type="TouchScreenButton" parent="exit"]
position = Vector2( -86, 8 )
scale = Vector2( 0.205078, 0.205078 )
normal = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.5
margin_top = -151.5
margin_right = 231.5
margin_bottom = 151.5
color = Color( 0.980392, 0.921569, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.5
margin_top = -36.5
margin_right = 144.5
margin_bottom = 36.5
custom_fonts/font = SubResource( 1 )
text = "Loading...."

[node name="error_msg" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -200.0
margin_right = 250.0
margin_bottom = 200.0
color = Color( 0.184314, 0.443137, 0.745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="error_msg"]
position = Vector2( 252.706, 94.5419 )
scale = Vector2( 0.351975, 0.351975 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="error_msg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.189
margin_top = 10.1086
margin_right = 189.811
margin_bottom = 54.1086
custom_fonts/font = SubResource( 2 )
text = "Please Enable Location"

[node name="Button" type="Button" parent="error_msg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = 79.2991
margin_right = 99.0
margin_bottom = 163.299
theme = ExtResource( 7 )
text = "Try Again"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="exit/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="button_up" from="error_msg/Button" to="." method="_on_Button_button_up"]
